--- a/STARPORTS_GetLoraId/.cproject
+++ b/STARPORTS_GetLoraId/.cproject
@@ -109,7 +109,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="STARPORTS_GetLoraId.c|CC3220SF_LAUNCHXL.c|uartecho.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="CC3220SF_LAUNCHXL.c|uartecho.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
