Cambios en Sensors.c para ajustarlo a los sensores que realmente están en la PCB Cambios en STARPORTS_App.c para acceder a los sensores (provionalmente se ha comentado la lectura de ficheros)

--- a/TEST_LORA_STARPORTS_1/.cproject
+++ b/TEST_LORA_STARPORTS_1/.cproject
@@ -109,7 +109,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="CC3220SF_LAUNCHXL.c|uartecho.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="platform.c|CC3220SF_LAUNCHXL.c|uartecho.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -217,7 +217,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="CC3220SF_LAUNCHXL.c|uartecho.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="platform.c|CC3220SF_LAUNCHXL.c|uartecho.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
