--- a/STARPORTS_GetLoraId/.settings/org.eclipse.core.resources.prefs
+++ b/STARPORTS_GetLoraId/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//Debug/makefile=UTF-8
+encoding//Debug/objects.mk=UTF-8
 encoding//Debug/optimizerAssistant/opt_level__0/makefile=UTF-8
 encoding//Debug/optimizerAssistant/opt_level__0/objects.mk=UTF-8
 encoding//Debug/optimizerAssistant/opt_level__0/sources.mk=UTF-8
@@ -29,6 +31,9 @@ encoding//Debug/optimizerAssistant/opt_level__off/objects.mk=UTF-8
 encoding//Debug/optimizerAssistant/opt_level__off/sources.mk=UTF-8
 encoding//Debug/optimizerAssistant/opt_level__off/subdir_rules.mk=UTF-8
 encoding//Debug/optimizerAssistant/opt_level__off/subdir_vars.mk=UTF-8
+encoding//Debug/sources.mk=UTF-8
+encoding//Debug/subdir_rules.mk=UTF-8
+encoding//Debug/subdir_vars.mk=UTF-8
 encoding//Release/optimizerAssistant/opt_level__0/makefile=UTF-8
 encoding//Release/optimizerAssistant/opt_level__0/objects.mk=UTF-8
 encoding//Release/optimizerAssistant/opt_level__0/sources.mk=UTF-8
